# Gemini_rs

./: Cargo.toml  README.md
src/: api.rs  client.rs  lib.rs  models.rs
