[package]
name = "Gemini_rs"
version = "0.1.0"
edition = "2024"
authors = ["Priyansh Singh <pastanwar6747@gmail.com>"]
description = "A Rust client for interacting with Google's Gemini API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Priyansh6747/Gemini_rs"
keywords = ["gemini", "google", "api", "ai", "rust"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
